--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
-        "swiper": "^11.0.6"
+        "swiper": "^11.0.6",
+        "vue3-carousel": "^0.3.1"
     }
 }
